--- a/tests/config.yml
+++ b/tests/config.yml
@@ -15,4 +15,4 @@ SUITES:
         - tests.cleaners.E
         - tests.cleaners.D
         - tests.cleaners.B
-    DEFAULT: *LIGHT
+    DEFAULT: *MODEL
