--- a/cleanfreak/conf/maya.yml
+++ b/cleanfreak/conf/maya.yml
@@ -3,6 +3,7 @@ SUITES:
     MODEL:
         - cleanfreak.checkers.mayacheckers.References
         - cleanfreak.checkers.mayacheckers.Intermediates
+        - cleanfreak.checkers.mayacheckers.UngroupedGeo
     SHADE:
         - cleanfreak.checkers.mayacheckers.References
     RIG:
