--- a/cleanfreak/conf/maya.yml
+++ b/cleanfreak/conf/maya.yml
@@ -2,12 +2,15 @@ CONTEXT: MAYA
 SUITES:
     MODEL:
         - cleanfreak.checkers.mayacheckers.References
-        - cleanfreak.checkers.mayacheckers.Intermediates
+        - cleanfreak.checkers.mayacheckers.IntermediateObjects
         - cleanfreak.checkers.mayacheckers.UngroupedGeo
+        - cleanfreak.checkers.mayacheckers.HasUVs
     SHADE:
         - cleanfreak.checkers.mayacheckers.References
     RIG:
         - cleanfreak.checkers.mayacheckers.References
     LIGHT:
+        - cleanfreak.checkers.mayacheckers.References
+    ANIMATE:
         - cleanfreak.checkers.mayacheckers.References
     DEFAULT: "MODEL"
