--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.rst
 include LICENSE
-include cleanfreak/conf/defaults.yml
-include cleanfreak/conf/maya.yml
+include cleanfreak/conf/config.yml
+include cleanfreak/conf/mayacheckers.py
 include requirements.txt
