--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,6 @@ include README.rst
 include LICENSE
 include cleanfreak/conf/config.yml
 include cleanfreak/conf/mayacheckers.py
+include cleanfreak/ui/style.css
+include cleanfreak/ui/cleanfreak.png
 include requirements.txt
